Fix contrast for navigation links, because lol Kindles

--- a/sitedir/resources/stylesheets/main.css
+++ b/sitedir/resources/stylesheets/main.css
@@ -18,7 +18,7 @@ border: solid 1px;
 }
 .links a:link, .links a:hover, .links a:active, .links a:visited {
 font-weight: bold;
-color: #FF0000;
+color: #AA0000;
 text-decoration: none;
 }
 .lefty a:link, .lefty a:hover, .lefty a:active, .lefty a:visited {
